--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,13 +5,14 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  background-color: white;
 }
 
 .status-bar__column {
   width: 33%;
 }
 
-.status-bar__column:first-child span {
+.status-bar__column:first-child > * {
   margin-right: 5px;
 }
 
@@ -26,6 +27,6 @@
   align-items: center;
 }
 
-.status-bar__column .fa-battery-full {
-  margin: 0px 5px;
+.status-bar__column:last-child > * {
+  margin-left: 5px;
 }
