--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,23 @@
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/point.css";
+@import "components/badge.css";
 
 /* Screens */
-/* @import "screen/*.css" */
+@import "screens/index.css";
 
 html,
 body {
   height: 100%;
+}
+
+body {
+  padding-top: var(--status-bar-top-padding);
+}
+
+.workspace {
+  width: 100%;
+  margin: 0px var(--basic-left-right-padding);
 }
