--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import "components/nav-bar.css";
 @import "components/point.css";
 @import "components/badge.css";
+@import "components/screen-header.css";
 
 /* Screens */
 @import "screens/index.css";
@@ -21,5 +22,5 @@ body {
 
 .workspace {
   width: 100%;
-  margin: 0px var(--basic-left-right-padding);
+  padding: 0px var(--basic-left-right-padding);
 }
