--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -4,8 +4,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 5px 3px;
+  padding: 10px var(--basic-left-right-padding);
   background-color: white;
+  box-sizing: border-box;
 }
 
 .status-bar__column {
