--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
 
 /* Screens */
 @import "screens/index.css";
+@import "screens/friedns.css";
+@import "screens/chats.css";
+@import "screens/find.css";
+@import "screens/more.css";
 
 html,
 body {
