--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100%;
   padding: 25px var(--basic-left-right-padding);
+  margin-top: var(--status-bar-height);
   background-color: white;
   box-sizing: border-box;
 }
