--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "components/point.css";
 @import "components/badge.css";
 @import "components/screen-header.css";
+@import "components/user-components.css";
 
 /* Screens */
 @import "screens/index.css";
