--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,12 @@
 
 /* Screens */
 @import "screens/index.css";
-@import "screens/friedns.css";
+@import "screens/friends.css";
 @import "screens/chats.css";
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/chat.css";
+@import "screens/settings.css";
 
 html,
 body {
